# security

./: README.md
blacklist_attack/attack/: attack.abi  attack.cpp  attack.sh  attack.wasm  attack.wast  untitled.sh
blacklist_attack/dice_plugin/: CMakeLists.txt  README.md  dice_plugin.cpp
blacklist_attack/dice_plugin/include/eosio/dice_plugin/: dice_plugin.hpp
blacklist_attack/tobetioadmin/: tobetioadmin.abi  tobetioadmin.wast
blacklist_attack/tobetiologs1/: tobetiologs1.abi  tobetiologs1.wasm  tobetiologs1.wast
